# cmd/api/app/url_mappings.go
@@ -81,6 +81,7 @@ func mapUrls(r *gin.Engine, app *Application) {
 	r.PUT("/api/v1/tiers/:id", app.tierController.Update)
 	r.DELETE("/api/v1/tiers/:id", app.tierController.Delete)
 	r.POST("/api/v1/tiers/:id/permissions", app.tierPermissionController.Assign)
+	r.GET("/api/v1/tiers/:id/permissions", app.tierPermissionController.List)
 	r.DELETE("/api/v1/tiers/:id/permissions/:permission_id", app.tierPermissionController.Unassign)
 	r.GET("/api/v1/roles", app.roleController.GetAll)
 	r.GET("/api/v1/roles/by-name", app.roleController.GetByName)
